[package]
name = "decimal-percentage"
version = "0.1.0"
authors = ["Guoli Lyu <guoli-lv@hotmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
description = "Percentage type with rust_decimal"
repository = "https://github.com/fMeow/arangors"
documentation = "https://docs.rs/arangors"
keywords = ["decimal", "percentage"]
exclude = [
    ".gitignore",
    ".github",
    "tests/**/*",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = "1"
